welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: ';' expected but '(' found.
	return {10<= Math.max(a,b):Int && Math.max(a,b):Int<=20}
                                                  ^